force-app/main/default/objects/OPP_IT_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Category__c</fullName>
        <label>Asset Category</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <label>Asset Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adapter</fullName>
                </value>
                <value>
                    <fullName>Camera</fullName>
                </value>
                <value>
                    <fullName>Computer</fullName>
                </value>
                <value>
                    <fullName>Keyboard</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Notebook</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Smart Keyboard</fullName>
                </value>
                <value>
                    <fullName>SmartPhone</fullName>
                </value>
                <value>
                    <fullName>Stylus Pen</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDelete_By_PM_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDelete (By PM Asset)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPoolUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPoolUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OPP_IT_Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WinNo_Reference_key__c</fullName>
        <externalId>true</externalId>
        <label>WinNo (Reference key)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>OPP IT Asset</label>
    <nameField>
        <label>Win No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>